force-app/main/default/objects/vlocity_cmt__OrchestrationPlan__c/fields/ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>ErrorCode__c</fullName>
    <description>Armazenamento das informações de log de erro que será retornado para o HRS
US 668
@Author: Diogo Sousa</description>
    <label>Código de Erro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>