force-app/main/default/objects/vlocity_cmt__OrchestrationPlan__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Armazenamento das informações de log de erro que será retornado para o HRS
US 668
@Author: Diogo Sousa</description>
    <label>Mensagem de erro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>