force-app/main/default/objects/vlocity_cmt__OrchestrationPlan__c/listViews/vlocity_cmt__All.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>vlocity_cmt__OrderId__c</columns>
    <columns>vlocity_cmt__AccountId__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>